--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -32,4 +32,5 @@
     <dimen name="padding_16">16dp</dimen>
     <dimen name="_35dp">35dp</dimen>
     <dimen name="_150dp">150dp</dimen>
+    <dimen name="_50dp">50dp</dimen>
 </resources>
