--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -15,18 +15,20 @@
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/profile_image"
-            android:layout_width="96dp"
-            android:layout_height="96dp"
-            android:src="@mipmap/ic_launcher"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:src="@drawable/custom"
             app:civ_border_color="@color/colorPrimary"
             app:civ_border_width="2dp" />
 
-        <ProgressBar
-            android:id="@+id/locationLoadingProgressBar"
-            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_35dp"
-            android:indeterminate="true" />
     </LinearLayout>
+
+    <ProgressBar
+        android:id="@+id/locationLoadingProgressBar"
+        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginTop="@dimen/_35dp"
+        android:indeterminate="true" />
 </RelativeLayout>
