--- a/app/src/main/res/values/theme.xml
+++ b/app/src/main/res/values/theme.xml
@@ -7,6 +7,7 @@
     </style>
     <style name="Button5">
         <item name="cornerSize">50%</item>
+        <item name="android:layout_width">150dp</item>
 
     </style>
 
