--- a/app/src/main/res/layout/patient_list_item_view.xml
+++ b/app/src/main/res/layout/patient_list_item_view.xml
@@ -5,54 +5,94 @@
     android:layout_height="wrap_content"
     android:paddingVertical="@dimen/fab_margin">
 
-    <ImageView
-        android:id="@+id/status"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/text_margin"
-        android:layout_marginTop="@dimen/status_margin"
-        android:contentDescription="@string/description_status"
-        android:gravity="center_vertical"
-        android:src="@drawable/ic_baseline_circle" />
+    <LinearLayout
+        android:visibility="gone"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignWithParentIfMissing="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="@dimen/text_margin"
-        android:layout_marginEnd="@dimen/small_text_margin"
-        android:layout_marginBottom="@dimen/small_text_margin"
-        android:layout_toEndOf="@id/status"
-        android:textAppearance="?attr/textAppearanceSubtitle1"
-        android:textStyle="bold"
-        tools:text="Navya Patel" />
+        <ImageView
+            android:id="@+id/status"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/text_margin"
+            android:layout_marginTop="@dimen/status_margin"
+            android:contentDescription="@string/description_status"
+            android:gravity="center_vertical"
+            android:src="@drawable/ic_baseline_circle" />
 
-    <TextView
-        android:id="@+id/field_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/name"
-        android:layout_alignStart="@id/name"
-        android:layout_marginTop="@dimen/small_text_margin"
-        android:layout_marginEnd="@dimen/text_margin"
-        android:layout_marginBottom="@dimen/small_text_margin"
-        android:singleLine="true"
-        android:textAppearance="?attr/textAppearanceBody2"
-        tools:text="50 years old" />
+        <TextView
 
-    <TextView
-        android:id="@+id/id"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/field_name"
-        android:layout_alignStart="@id/name"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="@dimen/small_text_margin"
-        android:layout_marginEnd="@dimen/small_text_margin"
-        android:layout_toEndOf="@id/status"
-        android:textAppearance="?attr/textAppearanceBody2"
-        tools:text="Id: #...456" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/text_margin"
+            android:layout_marginEnd="@dimen/small_text_margin"
+            android:layout_marginBottom="@dimen/small_text_margin"
+            android:textAppearance="?attr/textAppearanceSubtitle1"
+            android:textStyle="bold"
+            tools:text="Navya Patel" />
+
+        <TextView
+            android:layout_marginStart="@dimen/text_margin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/small_text_margin"
+            android:layout_marginEnd="@dimen/text_margin"
+            android:layout_marginBottom="@dimen/small_text_margin"
+            android:singleLine="true"
+            android:textAppearance="?attr/textAppearanceBody2"
+            tools:text="50 years old" />
+
+        <TextView
+            android:layout_marginStart="@dimen/text_margin"
+
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/small_text_margin"
+            android:layout_marginEnd="@dimen/small_text_margin"
+            android:textAppearance="?attr/textAppearanceBody2"
+            tools:text="Id: #...456" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <TextView
+            android:id="@+id/id"
+            android:text="01"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:layout_weight="1"
+            android:layout_marginStart="15dp"
+            android:id="@+id/name"
+            android:text="John"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:layout_marginStart="10dp"
+            android:gravity="end"
+            android:id="@+id/field_name"
+            android:text="50 years"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:layout_marginStart="10dp"
+            android:textColor="@android:color/holo_blue_light"
+            android:gravity="end"
+            android:text="@string/view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+
+
+    </LinearLayout>
+
+
 </RelativeLayout>
