--- a/app/src/main/res/layout/patient_list_item_view.xml
+++ b/app/src/main/res/layout/patient_list_item_view.xml
@@ -82,6 +82,7 @@
             android:layout_height="wrap_content"/>
 
         <TextView
+            android:id="@+id/tvView"
             android:layout_marginStart="10dp"
             android:textColor="@android:color/holo_blue_light"
             android:gravity="end"
