--- a/app/src/main/res/navigation/reference_nav_graph.xml
+++ b/app/src/main/res/navigation/reference_nav_graph.xml
@@ -25,6 +25,9 @@
         <action
             android:id="@+id/action_patient_list_to_maternityFragment"
             app:destination="@id/maternityFragment" />
+        <action
+            android:id="@+id/navigate_to_newborn"
+            app:destination="@id/newBornFragment" />
     </fragment>
 
     <fragment
@@ -101,6 +104,21 @@
             android:name="title"
             app:argType="string"
             app:nullable="true" />
+    </fragment>
+    <fragment
+        android:id="@+id/newBornFragment"
+        android:name="com.intellisoft.nndak.screens.newborn.NewBornFragment"
+        android:label="fragment_new_born"
+        tools:layout="@layout/fragment_new_born">
+        <action
+            android:id="@+id/navigate_to_edit_patient"
+            app:destination="@id/editPatientFragment" />
+        <action
+            android:id="@+id/navigate_to_screening"
+            app:destination="@id/screenerEncounterFragment" />
+        <argument
+            android:name="patient_id"
+            app:argType="string" />
     </fragment>
 
 </navigation>
