--- a/app/src/main/res/layout/fragment_maternity.xml
+++ b/app/src/main/res/layout/fragment_maternity.xml
@@ -6,9 +6,12 @@
     android:layout_height="match_parent"
     tools:context=".screens.maternity.MaternityFragment">
 
-
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/add_patient_container"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_margin="@dimen/fab_margin"
+        android:orientation="vertical"
+        android:scrollbars="vertical"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 </FrameLayout>
