--- a/app/src/main/res/navigation/reference_nav_graph.xml
+++ b/app/src/main/res/navigation/reference_nav_graph.xml
@@ -23,7 +23,7 @@
             android:id="@+id/action_patient_list_to_screenerEncounterFragment"
             app:destination="@id/screenerEncounterFragment" />
         <action
-            android:id="@+id/action_patient_list_to_maternityFragment"
+            android:id="@+id/navigate_to_maternity"
             app:destination="@id/maternityFragment" />
         <action
             android:id="@+id/navigate_to_newborn"
@@ -31,6 +31,12 @@
         <action
             android:id="@+id/navigate_to_post_natal"
             app:destination="@id/postNatalFragment" />
+        <action
+            android:id="@+id/navigate_to_dhm"
+            app:destination="@id/milkFragment" />
+        <action
+            android:id="@+id/navigate_to_assessment"
+            app:destination="@id/assessmentFragment" />
     </fragment>
 
     <fragment
@@ -96,26 +102,18 @@
         android:name="com.intellisoft.nndak.screens.maternity.MaternityFragment"
         android:label="fragment_maternity"
         tools:layout="@layout/fragment_maternity">
-
+        <action
+            android:id="@+id/navigate_to_screening"
+            app:destination="@id/screenerEncounterFragment" />
         <argument
             android:name="patient_id"
             app:argType="string" />
-        <argument
-            android:name="quastion"
-            app:argType="string" />
-        <argument
-            android:name="title"
-            app:argType="string"
-            app:nullable="true" />
     </fragment>
     <fragment
         android:id="@+id/newBornFragment"
         android:name="com.intellisoft.nndak.screens.newborn.NewBornFragment"
         android:label="fragment_new_born"
         tools:layout="@layout/fragment_new_born">
-        <action
-            android:id="@+id/navigate_to_edit_patient"
-            app:destination="@id/editPatientFragment" />
         <action
             android:id="@+id/navigate_to_screening"
             app:destination="@id/screenerEncounterFragment" />
@@ -129,8 +127,29 @@
         android:label="fragment_post_natal"
         tools:layout="@layout/fragment_post_natal">
         <action
-            android:id="@+id/navigate_to_edit_patient"
-            app:destination="@id/editPatientFragment" />
+            android:id="@+id/navigate_to_screening"
+            app:destination="@id/screenerEncounterFragment" />
+        <argument
+            android:name="patient_id"
+            app:argType="string" />
+    </fragment>
+    <fragment
+        android:id="@+id/milkFragment"
+        android:name="com.intellisoft.nndak.screens.milk.MilkFragment"
+        android:label="fragment_milk"
+        tools:layout="@layout/fragment_milk">
+        <action
+            android:id="@+id/navigate_to_screening"
+            app:destination="@id/screenerEncounterFragment" />
+        <argument
+            android:name="patient_id"
+            app:argType="string" />
+    </fragment>
+    <fragment
+        android:id="@+id/assessmentFragment"
+        android:name="com.intellisoft.nndak.screens.assessments.AssessmentFragment"
+        android:label="fragment_assessment"
+        tools:layout="@layout/fragment_assessment">
         <action
             android:id="@+id/navigate_to_screening"
             app:destination="@id/screenerEncounterFragment" />
