--- a/app/src/main/res/navigation/reference_nav_graph.xml
+++ b/app/src/main/res/navigation/reference_nav_graph.xml
@@ -90,7 +90,7 @@
 
     <fragment
         android:id="@+id/dashboard"
-        android:name="com.intellisoft.nndak.dashboard.DashboardFragment"
+        android:name="com.intellisoft.nndak.screens.dashboard.DashboardFragment"
         android:label="fragment_dashboard"
         tools:layout="@layout/fragment_dashboard">
         <action
