--- a/app/src/main/res/menu/maternity.xml
+++ b/app/src/main/res/menu/maternity.xml
@@ -7,4 +7,9 @@
         android:icon="@drawable/baseline_edit_24"
         android:title="@string/menu_maternity"
         app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/menu_apgar_score"
+        android:icon="@drawable/baseline_edit_24"
+        android:title="@string/menu_apgar_score"
+        app:showAsAction="never" />
 </menu>
