--- a/app/src/main/res/menu/maternity.xml
+++ b/app/src/main/res/menu/maternity.xml
@@ -8,6 +8,11 @@
         android:title="@string/menu_maternity"
         app:showAsAction="ifRoom" />
     <item
+        android:id="@+id/menu_new_born"
+        android:icon="@drawable/baseline_edit_24"
+        android:title="@string/menu_new"
+        app:showAsAction="never" />
+    <item
         android:id="@+id/menu_apgar_score"
         android:icon="@drawable/baseline_edit_24"
         android:title="@string/menu_apgar_score"
