--- a/app/src/main/res/navigation/reference_nav_graph.xml
+++ b/app/src/main/res/navigation/reference_nav_graph.xml
@@ -71,6 +71,9 @@
             android:name="title"
             app:argType="string"
             app:nullable="true" />
+        <action
+            android:id="@+id/navigate_to_self"
+            app:destination="@id/screenerEncounterFragment" />
     </fragment>
     <fragment
         android:id="@+id/addPatientFragment"
